OpenShift/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: backend
  template:
    metadata:
      labels:
        app: guestbook
        tier: backend
    spec:
      containers:
      - name: guestbook-backend
        image: quay.io/shaheeramudasar/guestbook-backend:latest
        ports:
        - containerPort: 8080
