OpenShift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: guestbook-frontend
        image: quay.io/shaheeramudasar/guestbook-frontend:latest
        ports:
        - containerPort: 8080
