OpenShift/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: database # Unique identifier
  template:
    metadata:
      labels:
        app: guestbook
        tier: database # Unique identifier
    spec:
      containers:
      - name: postgres
        image: quay.io/fedora/postgresql-16:latest
        ports:
        - containerPort: 5432
