OpenShift/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: cache
  template:
    metadata:
      labels:
        app: guestbook
        tier: cache
    spec:
      containers:
      - name: redis
        image: quay.io/fedora/redis-7:latest
        ports:
        - containerPort: 6379
