OpenShift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend  
spec:
  selector:
    app: guestbook
    tier: backend
  ports:
    - protocol: TCP
      port: 8080        
      targetPort: 5000
