OpenShift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend-service
spec:
  selector:
    app: guestbook
    tier: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
